<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_options"
        android:textColor="@color/colorPrimaryText"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/filter_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_name_or_strength"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/filter_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/filter_strength"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/order_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_asc_desc"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp" />


        <RadioButton
            android:id="@+id/filter_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/filter_asc"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/filter_desc"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/text_cancel"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_apply"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>