<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/focusable_view"
            android:layout_width="0.5dp"
            android:layout_height="0.5dp"
            android:focusableInTouchMode="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_text_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp">

            <TextView
                android:id="@+id/mode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chewy"
                android:text="@string/theme_mode_text"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/arrow"
                app:layout_constraintTop_toBottomOf="@+id/arrow" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/arrow_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimaryText" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/filter_icon"
                app:layout_constraintBottom_toTopOf="@+id/filter_text"
                app:layout_constraintEnd_toEndOf="@+id/filter_text"
                app:layout_constraintStart_toStartOf="@+id/filter_text" />

            <TextView
                android:id="@+id/filter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chewy"
                android:text="@string/filter_info_text"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/search_box_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mode_text" />

            <TextView
                android:id="@+id/search_box_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chewy"
                android:gravity="center"
                android:lines="2"
                android:text="@string/search_box_info"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mode_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/layout_superhero_list_item" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/pop_up_top_button"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:borderWidth="0dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/colorPrimaryDark"
            app:fabSize="mini"
            app:srcCompat="@drawable/arrow_up"
            app:tint="@color/colorPrimaryLight" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>