<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorAccent"
        android:elevation="1dp">

        <View
            android:id="@+id/view1"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintEnd_toStartOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="75dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/default_image"
            app:layout_constraintStart_toEndOf="@+id/view1"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/chewy"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.6"
            android:contentDescription="@string/todo"
            android:elevation="2dp"
            android:src="@drawable/ic_baseline_grain_24"
            app:layout_constraintBottom_toBottomOf="@+id/view1"
            app:layout_constraintEnd_toEndOf="@+id/view1"
            app:layout_constraintStart_toStartOf="@+id/view1"
            app:layout_constraintTop_toTopOf="@id/view1" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chewy"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <ImageView
            android:id="@+id/arrow_rotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:alpha="0.4"
            android:contentDescription="@string/todo"
            android:src="@drawable/arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorPrimaryText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1">

            <View
                android:id="@+id/view2"
                android:layout_width="80dp"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/chewy"
                android:text="@string/aliases"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/view2"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_more_info"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/chewy"
                android:text="@string/more_info"
                android:textColor="@color/colorAccent"
                app:icon="@drawable/arrow_forward"
                app:iconGravity="end"
                app:iconSize="20sp"
                app:iconTint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/expandableLayout" />

            <TextView
                android:id="@+id/aliases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/chewy"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/about"
                app:layout_constraintTop_toBottomOf="@+id/button_more_info" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>